# PikoRL

./: .gitignore  CMakeLists.txt  PikoRL.hpp  README.md  pikorl-cli.cpp
bindings/: GenerateBindings.py  PikoRL.i
cmake/: pikorl.pc.in
demo_bundle/: .pikorl_stub.sh  colors.lua  entrypoint.sh
docs/: CMakeLists.txt  Doxyfile.in  FrontPage.md
docs/manual/: Chapter-1.md  Chapter-2.md  Chapter-3.md  Chapter-4.md  Chapter-5.md  Chapter-6.md  Chapter-7.md  Chapter-8.md
examples/PythonRL/: MANIFEST.json
examples/RubyRL/: MANIFEST.json
examples/bundle/demo_bundle/: MANIFEST.json  demo.run  history.lua  package.sh  syntax.lua  theme.lua  web.lua
examples/bundle/demo_bundle2/: .pikorl_run_entrypoint.sh  bundle.pikorl  demo.run  macros.lua  package.sh
examples/bundle/demo_bundle3/: .pikorl_run_entrypoint.sh  MANIFEST.json  ddrv  demo.run  package.sh
qamrpp-lpikorl/: CMakeLists.txt  colors.c  completion.c  directive.c  help.c  history.c  idl.c  lpikorl.c  lpikorl.h  macros.c  menu.c  page.c  prompt.c  sandboxing.c  syntax.c  theme.c  web.c
